[gd_scene load_steps=7 format=3 uid="uid://dhh18r6cgpi6s"]

[ext_resource type="Script" path="res://ingame_settings.gd" id="1_4c2y6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6ds7"]
bg_color = Color(0.4, 0.658824, 0.596078, 1)
border_color = Color(0, 0.835294, 0.835294, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.431373)
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="Theme" id="Theme_dalsl"]
Panel/styles/panel = SubResource("StyleBoxFlat_c6ds7")
VBoxContainer/constants/separation = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oay6q"]
bg_color = Color(0.215686, 0.4, 0.356863, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20
shadow_size = 1
shadow_offset = Vector2(3, 0)

[sub_resource type="Theme" id="Theme_4pv8q"]
Panel/styles/panel = SubResource("StyleBoxFlat_oay6q")

[sub_resource type="Theme" id="Theme_htbgu"]

[node name="settings_ui" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -148.0
offset_right = 294.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_dalsl")
script = ExtResource("1_4c2y6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_4pv8q")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource("Theme_htbgu")
alignment = 1

[node name="visual" type="Button" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Visual"

[node name="audio" type="Button" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Audio"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="back" type="Button" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="quit" type="Button" parent="HBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="visual_panel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_htbgu")
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/visual_panel"]
layout_mode = 2
theme_override_constants/margin_left = 460

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/visual_panel"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/visual_panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="HBoxContainer/visual_panel/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Window mode"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/visual_panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/visual_panel/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/visual_panel"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/visual_panel/HBoxContainer2"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/visual_panel/HBoxContainer2/MarginContainer3"]
layout_mode = 2
text = "FPS Boost (FSR 2.2)"

[node name="far_scaling" type="HBoxContainer" parent="HBoxContainer/visual_panel"]
visible = false
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/visual_panel/far_scaling"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_constants/margin_left = 5

[node name="Label" type="Label" parent="HBoxContainer/visual_panel/far_scaling/MarginContainer2"]
layout_mode = 2
text = "FSR scaling"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/visual_panel/far_scaling"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 10

[node name="HSlider" type="HSlider" parent="HBoxContainer/visual_panel/far_scaling/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 4
value = 50.0

[node name="audio_panel" type="VBoxContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_htbgu")
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/audio_panel"]
layout_mode = 2
theme_override_constants/margin_left = 460

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/audio_panel"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/audio_panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="audio_lvl" type="Label" parent="HBoxContainer/audio_panel/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Music Audio"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/audio_panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HSlider" type="HSlider" parent="HBoxContainer/audio_panel/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/audio_panel"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/audio_panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/audio_panel/HBoxContainer2/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
text = "Mute"
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/audio_panel"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/audio_panel/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="audio_lvl" type="Label" parent="HBoxContainer/audio_panel/HBoxContainer3/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "SFX Audio"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/audio_panel/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HSlider" type="HSlider" parent="HBoxContainer/audio_panel/HBoxContainer3/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
value = 50.0

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/audio_panel"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/audio_panel/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/audio_panel/HBoxContainer4/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
text = "Mute"
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/visual" to="." method="_on_visual_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="item_selected" from="HBoxContainer/visual_panel/HBoxContainer/MarginContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="HBoxContainer/visual_panel/HBoxContainer2/MarginContainer3/CheckButton" to="." method="_on_check_button_toggled_fsr"]
[connection signal="value_changed" from="HBoxContainer/visual_panel/far_scaling/MarginContainer3/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/audio_panel/HBoxContainer/MarginContainer/HSlider" to="." method="_on_h_slider_value_changed_audio"]
[connection signal="toggled" from="HBoxContainer/audio_panel/HBoxContainer2/MarginContainer2/CheckButton" to="." method="_on_check_button_toggled_muted"]
[connection signal="value_changed" from="HBoxContainer/audio_panel/HBoxContainer3/MarginContainer/HSlider" to="." method="_on_h_slider_value_changed_SFX"]
[connection signal="value_changed" from="HBoxContainer/audio_panel/HBoxContainer3/MarginContainer/HSlider" to="." method="_on_h_slider_value_changed_audio"]
[connection signal="toggled" from="HBoxContainer/audio_panel/HBoxContainer4/MarginContainer2/CheckButton" to="." method="_on_check_button_toggled_muted"]
[connection signal="toggled" from="HBoxContainer/audio_panel/HBoxContainer4/MarginContainer2/CheckButton" to="." method="_on_check_button_toggled_SFX"]
